--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jitsi/react-sdk": "^1.3.0",
     "axios": "^1.4.0",
     "jest": "^29.5.0",
+    "lib-jitsi-meet": "^1.0.6",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
